--- a/FootScout.WebClient/src/styles/account/Login.css
+++ b/FootScout.WebClient/src/styles/account/Login.css
@@ -1,5 +1,35 @@
 .Login {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    background-color: rgb(16, 97, 47);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.logo-container {
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.Login h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(108, 212, 102);
+    padding-bottom: 10px;
+}
+
+.login-container {
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 42%;
+    padding: 2% 4% 3% ;
+    border-radius: 30px;
+}
+
+.white-label {
+    color: white;
 }
