--- a/FootScout.WebClient/src/styles/user/MyProfile.css
+++ b/FootScout.WebClient/src/styles/user/MyProfile.css
@@ -1,5 +1,36 @@
 .MyProfile {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 20px;
+    font-size: 17px;
+}
+
+.buttons-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.form-button {
+    width: 200px;
+}
+
+.data-container {
+    background-color: rgb(39, 37, 37);
+    width: 60%;
+    border-radius: 30px;
+    padding-top: 40px;
     padding-bottom: 20px;
+}
+
+.green-label {
+    color: rgb(98, 197, 93);
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.white-label {
+    color: white;
 }
