--- a/FootScout.WebClient/src/styles/user/ClubHistory.css
+++ b/FootScout.WebClient/src/styles/user/ClubHistory.css
@@ -8,3 +8,24 @@
     text-align: center;
     margin: 0 auto;
 }
+
+.button-spacing {
+    margin-right: 10px;
+}
+
+/* Responsive Table */
+.table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.table-responsive table {
+    min-width: 600px;
+}
+
+/* Mobile Specific Styles */
+@media (max-width: 576px) {
+    .table-responsive table {
+        min-width: 100%;
+    }
+}
