--- a/FootScout.WebClient/src/App.css
+++ b/FootScout.WebClient/src/App.css
@@ -1,12 +1,11 @@
 .App {
   text-align: center;
+  background-color: rgb(240, 247, 240);
+  background-size: cover;
+  height: 100vh;
 }
 
 .logo {
   width: 40px;
   margin-right: 10px;
-}
-
-.green-links .nav-link {
-  color: rgb(92, 226, 117);
 }
