--- a/FootScout.WebClient/src/styles/playerAdvertisement/NewPlayerAdvertisement.css
+++ b/FootScout.WebClient/src/styles/playerAdvertisement/NewPlayerAdvertisement.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 20px;
+    padding: 20px 10% 20px 10%;
     font-size: 17px;
 }
 
 .forms-container {
     background-color: rgb(39, 37, 37);
-    width: 70%;
+    width: 80%;
     padding: 2% 2% 1% ;
     border-radius: 40px;
 }
