--- a/FootScout.WebClient/src/styles/user/ClubHistory.css
+++ b/FootScout.WebClient/src/styles/user/ClubHistory.css
@@ -1,7 +1,6 @@
 .ClubHistory {
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 10% 20px 10%;
 }
 
 .modal-content-centered {
