--- a/FootScout.WebClient/src/styles/user/MyProfile.css
+++ b/FootScout.WebClient/src/styles/user/MyProfile.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 20px;
+    padding: 20px 10% 0px 10%;
     font-size: 17px;
 }
 
@@ -19,7 +19,7 @@
 
 .data-container {
     background-color: rgb(39, 37, 37);
-    width: 60%;
+    width: 70%;
     border-radius: 30px;
     padding-top: 40px;
     padding-bottom: 20px;
