Club pages implemented

--- a/FootScout.WebClient/src/styles/playerAdvertisement/PlayerAdvertisements.css
+++ b/FootScout.WebClient/src/styles/playerAdvertisement/PlayerAdvertisements.css
@@ -1,5 +1,6 @@
 .PlayerAdvertisements {
     text-align: center;
+    background-color: rgb(240, 247, 240);
     padding: 20px 10% 20px 10%;
 }
 
@@ -18,8 +19,8 @@
     -webkit-overflow-scrolling: touch;
 }
 
-.table td {
-    line-height: 5;
+.ad-row {
+    line-height: 6;
 }
 
 .table-responsive table {
