--- a/FootScout.WebClient/src/styles/user/MyOffersAsPlayer.css
+++ b/FootScout.WebClient/src/styles/user/MyOffersAsPlayer.css
@@ -1,5 +1,6 @@
 .MyOffersAsPlayer {
     text-align: center;
+    background-color: rgb(240, 247, 240);
     padding: 20px 10% 20px 10%;
 }
 
@@ -16,6 +17,10 @@
 .table-responsive {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+}
+
+.offer-row {
+    line-height: 4;
 }
 
 .table-responsive table {
