--- a/FootScout.WebClient/src/styles/clubAdvertisement/ClubAdvertisement.css
+++ b/FootScout.WebClient/src/styles/clubAdvertisement/ClubAdvertisement.css
@@ -1,4 +1,4 @@
-.PlayerAdvertisement {
+.ClubAdvertisement {
     background-color: rgb(240, 247, 240);
     display: flex;
     flex-direction: column;
@@ -35,7 +35,7 @@
 }
 
 .ad-container {
-    background-color: rgb(216, 225, 216);
+    background-color: rgb(209, 218, 222);
     width: 90%;
     border-radius: 30px;
     padding-top: 10px;
@@ -44,7 +44,7 @@
 }
 
 .ad-name-label {
-    color: rgb(148, 141, 42);
+    color: rgb(158, 150, 32);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 36px;
     font-weight: bold;
