--- a/FootScout.WebClient/src/styles/clubAdvertisement/ClubAdvertisements.css
+++ b/FootScout.WebClient/src/styles/clubAdvertisement/ClubAdvertisements.css
@@ -1,4 +1,4 @@
-.ClubHistory {
+.ClubAdvertisements {
     text-align: center;
     background-color: rgb(240, 247, 240);
     padding: 20px 10% 20px 10%;
@@ -19,6 +19,10 @@
     -webkit-overflow-scrolling: touch;
 }
 
+.ad-row {
+    line-height: 6;
+}
+
 .table-responsive table {
     min-width: 600px;
 }
@@ -28,4 +32,20 @@
     .table-responsive table {
         min-width: 100%;
     }
+}
+
+.pagination-green .page-item .page-link {
+    background-color: #54c16d;
+    border-color: #54c16d;
+    color: #fff;
+}
+
+.pagination-green .page-item.active .page-link {
+    background-color: #186128; 
+    border-color: #186128;
+}
+
+.pagination-green .page-item .page-link:hover {
+    background-color: #2b8f41;
+    border-color: #2b8f41;
 }
