--- a/FootScout.WebClient/src/styles/user/MyFavoriteClubAdvertisements.css
+++ b/FootScout.WebClient/src/styles/user/MyFavoriteClubAdvertisements.css
@@ -1,4 +1,4 @@
-.ClubHistory {
+.MyFavoriteClubAdvertisements {
     text-align: center;
     background-color: rgb(240, 247, 240);
     padding: 20px 10% 20px 10%;
