--- a/FootScout.WebClient/src/styles/user/MyProfile.css
+++ b/FootScout.WebClient/src/styles/user/MyProfile.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(240, 247, 240);
     padding: 20px 10% 0px 10%;
     font-size: 17px;
 }
