--- a/FootScout.WebClient/src/styles/user/MyOffersAsPlayer.css
+++ b/FootScout.WebClient/src/styles/user/MyOffersAsPlayer.css
@@ -33,3 +33,24 @@
         min-width: 100%;
     }
 }
+
+.clubOffer-name-label {
+    color: rgb(148, 141, 42);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.clubOffer-position-label {
+    color: rgb(99, 99, 92);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.clubOffer-section {
+    color: rgb(162, 146, 38);
+    font-family:'Times New Roman', Times, serif;
+    font-size: 20px;
+    font-weight: bold;
+}
