--- a/FootScout.WebClient/src/styles/layout/Navbar.css
+++ b/FootScout.WebClient/src/styles/layout/Navbar.css
@@ -1,7 +1,8 @@
 .green-links .nav-link {
   color: rgb(92, 226, 117);
+  font-weight: 400;
 }
 
-.dropdown-item.active {
+.green-links .dropdown-item.active {
   background: rgb(73, 204, 97) !important;
 }
