--- a/FootScout.WebClient/src/styles/chat/Chat.css
+++ b/FootScout.WebClient/src/styles/chat/Chat.css
@@ -37,18 +37,47 @@
 }
 
 .chat-container {
+    display: flex;
+    flex-direction: column;
+    height: 75vh;
     background-color: rgb(210, 218, 227);
-    width: 80%;
+    width: 65%;
     padding: 2% 2% 1% ;
-    border-radius: 40px;
+    border-radius: 20px;
 }
 
-.chat-container h2 {
-    color: rgb(118, 112, 21);
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: bold;
+.chat-name {
+    color: rgb(255, 255, 255) !important;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-weight: bold !important;
+    font-size: 24px !important;
 }
 
 .message-timestamp {
     font-size: 14px;
+}
+
+.messages {
+    flex: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 70%;
+    padding: 10px;
+    border: 1px solid #f4f4f4;
+    margin-bottom: 1rem;
+}
+
+.message-input {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    padding: 10px;
+    border-top: 1px solid #dee2e6;
+    z-index: 1000;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
+
+.sticky-navbar {
+    z-index: 1000;
 }
