--- a/FootScout.WebClient/src/styles/user/MyFavoriteClubAdvertisements.css
+++ b/FootScout.WebClient/src/styles/user/MyFavoriteClubAdvertisements.css
@@ -13,6 +13,19 @@
     margin-right: 10px;
 }
 
+.custom-tabs .nav-link {
+    color: rgb(0, 0, 0) !important;
+}
+
+.custom-tabs .nav-link.active {
+    background-color: rgb(48, 48, 48) !important;
+    color: rgb(255, 255, 255) !important;
+}
+
+.custom-tabs .nav-link:hover {
+    color: rgb(223, 223, 223) !important;
+}
+
 /* Responsive Table */
 .table-responsive {
     overflow-x: auto;
